--- a/styles.css
+++ b/styles.css
@@ -1,64 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 * {
 	margin: 0px;
-	border: 1px solid red;
+	/*border: 1px solid red;*/
 }
 
 body {
-	background-color: black;
-	color: aliceblue;
+	background: url(bg.png) center center fixed no-repeat;
+	background-color: #d9dcd6;
+	color: black;
 	height: 100dvh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
+	font-family: "Inter", sans-serif;
 }
 #calc {
-	background-color: #888;
-	border-radius: 40px;
+	background-color: rgba(225, 225, 225, 0.15);
+	backdrop-filter: blur(24px) saturate(200%);
+	border: 1px solid rgba(255, 255, 255, 0.15);
+	border-radius: 30px;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 	padding: 20px;
 	height: 600px;
 	width: 290px;
+	box-shadow: 0 8px 30px rgba(0, 0, 0, 0.25);
 }
 
 #display {
 	text-align: right;
+	font-family: "Inter", sans-serif;
 	font-size: 36px;
-	width: 100%;
-	height: 70px;
+	margin-top: 50px;
+	width: 90%;
+	height: 90px;
 	border: none;
-	background-color: #fff;
+	background-color: rgba(0, 0, 0, 0);
+	color: #f3f4f6;
 }
 
 #btnContainer {
-	justify-self: flex-end;
 	width: 100%;
-	height: 470px;
+	height: 430px;
 }
 
 .btn {
-	font-size: 24px;
+	font-family: "Inter", sans-serif;
+	font-size: 28px;
+	background-color: #d9d9d9;
 	margin: 2px;
 	width: 64px;
-	height: 90px;
-	border-radius: 25px;
-	color: royalblue;
-}
-
-.btn:hover {
-	background-color: aqua;
+	height: 80px;
+	border-radius: 22px;
+	color: #6729bd;
+	border: none;
+	transition: all 0.3s;
+	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
 .opBtn {
-	background-color: royalblue;
-	color: white;
+	background-color: #6729bd;
+	color: #d9d9d9;
 }
 
-#clearAll,
+#clearAll {
+	width: 138px;
+	background-color: #f71735;
+	color: #d9dcd6;
+}
 #clearOne {
 	width: 138px;
+	background-color: #d9d9d9;
+	color: #f71735;
+}
+
+@media (hover: hover) {
+	.btn:hover {
+		filter: brightness(120%);
+		transform: scale(1.05);
+	}
+}
+
+@media (hover: none) {
+	.btn {
+		transition: none;
+	}
+	.btn:active {
+		filter: brightness(120%);
+		transform: scale(0.94);
+	}
+}
+@media (max-height: 700px) {
+	#calc {
+		transform: scale(0.9);
+	}
 }
