--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-	background: url(bg.png) center center fixed no-repeat;
+	background: url(assets/bg.png) center center fixed no-repeat;
 	background-color: black;
 	background-size: cover;
 	color: black;
